--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div id="main-wrapper">
 <app-top-bar-nav ></app-top-bar-nav>
 <app-side-bar-nav></app-side-bar-nav>
-<app-gestion-des-ventes></app-gestion-des-ventes>
-<app-gestion-des-utilisateures></app-gestion-des-utilisateures>
-<app-gestion-des-droits></app-gestion-des-droits>
+<router-outlet></router-outlet>
+
 </div>
