--- a/src/app/gestion-des-utilisateures/gestion-des-utilisateures.component.html
+++ b/src/app/gestion-des-utilisateures/gestion-des-utilisateures.component.html
@@ -4,7 +4,7 @@
 
     <div class="clr">
         <div class="col-md-5 align-self-center">
-            <h3 class="title">Gestion Des Ventes</h3>
+            <h3 class="title">Gestion Des utilsateurs</h3>
         </div>
         <div class="col-md-7 align-self-center">
 
