--- a/src/app/gestion-des-ventes/gestion-des-ventes.component.html
+++ b/src/app/gestion-des-ventes/gestion-des-ventes.component.html
@@ -1,7 +1,4 @@
-
 <div class="page-wrapper">
-
-
     <div class="clr">
         <div class="col-md-5 align-self-center">
             <h3 class="title">Gestion Des Ventes</h3>
@@ -17,7 +14,7 @@
     </div>
     <ul class="nav nav-tabs cls">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Produit</a>
+          <a class="nav-link active" routerLink="/produit">Produit</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Fournisseur</a>
@@ -29,6 +26,6 @@
       </ul>
     
 
-  
+     
 </div>
 
