--- a/src/app/gestion-des-droits/gestion-des-droits.component.css
+++ b/src/app/gestion-des-droits/gestion-des-droits.component.css
@@ -1,6 +1,6 @@
 .clr {
     padding: 30px;
-    background-color: #FFAA58;
+    background-color: #854d53;
    
 }
 .title{
@@ -10,4 +10,8 @@ font-weight: bold;
 .cls{
     background-color: white;
 
+}
+.ajout{
+    margin: 20px;
+ 
 }
